--- a/Project.toml
+++ b/Project.toml
@@ -15,4 +15,5 @@ Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+SankeyPlots = "8fd88ec8-d95c-41fc-b299-05f2225f2cc5"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
